2_kube_tutorial/3_services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: &target 80
    name: http
    targetPort: *target
  - port: 443
    name: https
    targetPort: *target
